fixed ui for diff screen sizes

--- a/client-side/nimbelcart/src/Client/pages/Products/Products.css
+++ b/client-side/nimbelcart/src/Client/pages/Products/Products.css
@@ -25,8 +25,9 @@
 
 .price {
   display: flex;
-  justify-content: space-between;
-  width: 40%;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  width: 50%;
   margin: auto;
   padding-left: 10px;
   margin-top: 8px;
